fix grid overflow

--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -1,7 +1,8 @@
 .stack {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 5%;
+  grid-gap: 25px;
+  grid-auto-rows: 500px;
 
   @media (--mobile) {
     grid-template-columns: repeat(1, 1fr);
